Apply website modifications: logo, text, buttons, layout fixes.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MultiVikings - Domótica y Automatización del Hogar</title>
+    <title>MultiViking</title>
     <meta name="description" content="Especialistas en domótica y casas inteligentes. Automatización, seguridad y eficiencia energética para tu hogar. Consulta gratuita." />
     <meta name="author" content="MultiVikings" />
     <meta name="keywords" content="domótica, casa inteligente, automatización hogar, seguridad, climatización smart, iluminación inteligente" />
